# opensimrt_bridge

./: .gitignore  CMakeLists.txt  README.md  imus_sto_to_tf.py  package.xml  ros_csvdumper.py  test.sto
data/: grf_fk_Gait6.mot
include/opensimrt_bridge/: IkPublisher.h  conversions.h
include/opensimrt_bridge/conversions/: message_convs.h  misc.h
launch/: grf.launch  grf2.launch  grf_as_wrench.launch  grf_fk.launch  ik_acceleration_prediction_gfrm.launch  ik_bare.launch  ik_upper_arm.launch
src/: b  bridge.cpp  grf_mot_file_dumper.cpp  id_file_dumper.cpp  ik_file_dumper.cpp  ik_saver.cpp
src/conversions/: message_convs.cpp  misc.cpp
