<?xml version="1.0"?>
<package format="2">
  <name>opensimrt_bridge</name>
  <version>0.0.1</version>
  <description>opensimrt_bridge creates topics from .sto .mot and .trc files to be used in conjunction with opensimrt. </description>

  <maintainer email="frekle@kth.se">Frederico Klein</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>opensimrt</build_depend>
  <build_depend>opensimrt_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>opensimrt</build_export_depend>
  <build_export_depend>opensimrt_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>opensimrt</exec_depend>
  <exec_depend>opensimrt_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
